adds current deferral status endpoint (#1007)
* adds current deferral status endpoint

Current deferral status endpoint returns the deferral status only of the deferred CPTs at the specified date.

Issue : FWPM-1954