@@ -2,19 +2,26 @@ package com.mercadolibre.planning.model.api.web.controller.deferral;
 
 import static com.mercadolibre.planning.model.api.util.DateUtils.validateDatesRanges;
 
+import com.mercadolibre.planning.model.api.domain.entity.Workflow;
 import com.mercadolibre.planning.model.api.domain.usecase.deferral.GetDeferralReport;
+import com.mercadolibre.planning.model.api.domain.usecase.deferral.GetDeferred;
+import com.mercadolibre.planning.model.api.domain.usecase.deferral.GetDeferred.DeferralStatus;
 import com.mercadolibre.planning.model.api.domain.usecase.deferral.SaveOutboundDeferralReport;
 import com.mercadolibre.planning.model.api.exception.DateRangeException;
+import com.mercadolibre.planning.model.api.web.controller.editor.WorkflowEditor;
 import com.newrelic.api.agent.Trace;
 import java.time.Instant;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.validation.Valid;
 import javax.validation.constraints.NotBlank;
 import javax.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
+import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.InitBinder;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -30,12 +37,11 @@ public class DeferralController {
 
   private GetDeferralReport getDeferralReport;
 
+  private GetDeferred getDeferred;
+
   @PostMapping("/events")
   @Trace(dispatcher = true)
-  public ResponseEntity<DeferralResponse> saveDeferredEvent(
-      @RequestBody @Valid final Msg request
-  ) {
-
+  public ResponseEntity<DeferralResponse> saveDeferredEvent(@RequestBody @Valid final Msg request) {
     final DeferralResponse deferralResponse = saveOutboundDeferralReport.save(
         request.getMsg().getWarehouseId(),
         request.getMsg().getLastUpdated(),
@@ -62,10 +68,27 @@ public class DeferralController {
             deferral.getKey(),
             deferral.getValue().stream()
                 .map(sla -> new DeferralReportDto.DeferralTime.StatusBySla(sla.getDate(), sla.getStatus()))
-                .collect(Collectors.toList())))
-        .collect(Collectors.toList());
+                .toList())
+        ).toList();
 
     return ResponseEntity.ok(new DeferralReportDto(deferralTime));
+  }
+
+  @Trace(dispatcher = true)
+  @GetMapping("{logisticCenterId}/status")
+  public ResponseEntity<DeferralStatusDto> getDeferralsAtDate(
+      @PathVariable final String logisticCenterId,
+      @RequestParam @Valid @NotNull final Workflow workflow,
+      @RequestParam @Valid @NotNull final Instant viewDate
+  ) {
+    final var statuses = getDeferred.getDeferred(logisticCenterId, workflow, viewDate);
+    final var response = new DeferralStatusDto(
+        statuses.stream()
+            .sorted(Comparator.comparing(DeferralStatus::date))
+            .toList()
+    );
+
+    return ResponseEntity.ok(response);
   }
 
   private List<SaveOutboundDeferralReport.CptDeferralReport> mapSlaDeferral(final List<Msg.Projection> projections) {
@@ -73,7 +96,17 @@ public class DeferralController {
         .map(projection -> new SaveOutboundDeferralReport.CptDeferralReport(
             projection.getEstimatedTimeDeparture(),
             projection.isUpdated(),
-            projection.getDeferralStatus().getDeferralType()))
-        .collect(Collectors.toList());
+            projection.getDeferralStatus().getDeferralType())
+        )
+        .toList();
   }
+
+  @InitBinder
+  public void initBinder(final PropertyEditorRegistry dataBinder) {
+    dataBinder.registerCustomEditor(Workflow.class, new WorkflowEditor());
+  }
+
+  record DeferralStatusDto(List<DeferralStatus> statuses) {
+  }
+
 }
